--- a/src/styles/layout.less
+++ b/src/styles/layout.less
@@ -2,3 +2,10 @@
   height: unset;
   min-height: 72px;
 }
+
+.head {
+  background: url(../assets/image/header-back.avif) no-repeat;
+  background-size: 100%;
+  background-position-x: center;
+  background-position-y: top;
+}
