--- a/src/styles/layout.less
+++ b/src/styles/layout.less
@@ -2,10 +2,7 @@
   height: unset;
   min-height: 72px;
 }
-
-.head {
-  background: url(../assets/image/header-back.avif) no-repeat;
+.header {
+  background: url("../assets/image/header-back.avif") no-repeat center;
   background-size: 100%;
-  background-position-x: center;
-  background-position-y: top;
 }
