--- a/src/styles/layout.less
+++ b/src/styles/layout.less
@@ -6,3 +6,13 @@
   background: url("../assets/image/header-back.avif") no-repeat center;
   background-size: 100%;
 }
+@media screen  and (max-width:767px) {
+  .header {
+ background: url("../assets/image/header-back.avif") no-repeat center;
+}
+.ant-tabs{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+}
