--- a/src/styles/layout.less
+++ b/src/styles/layout.less
@@ -15,4 +15,14 @@
   justify-content: center;
   align-items: center;
 }
+.callInput{
+  margin-left:12px;
+}
+#wx{
+  width: 100vw;
+  display: flex;
+  align-items: flex-start;
+  position: relative;
+  left: -40px;
+}
 }
