--- a/src/styles/layout.less
+++ b/src/styles/layout.less
@@ -25,4 +25,38 @@
   position: relative;
   left: -40px;
 }
+#balance{
+  width: 100vw;
+  height: 300px!important;
+}
+#balanceImg{
+  width: 70vw!important;
+}
+#balanceDiv1{
+  width: 150px;
+  left: 40%!important;
+  top: 52%!important;
+}
+#balanceDiv2{
+  width: 150px;
+  left: 40%!important;
+  top: 92%!important;
+}
+#deposit{
+  height: 640px!important;
+  flex: 1 1 auto !important;
+}
+#depositImg{
+  width: 48vw!important;
+}
+#depositDiv1{
+  width: 150px!important;
+  top: 80%!important;
+  left: 30%!important;
+}
+#depositDiv2{
+  width: 150px!important;
+  top: 170%!important;
+  left: 30%!important;
+}
 }
