--- a/src/styles/layout.less
+++ b/src/styles/layout.less
@@ -17,6 +17,13 @@
 }
 .callInput{
   margin-left:12px;
+  width: 220px!important;
+}
+#Box{
+  width: 70vw!important;
+}
+#small{
+  width: 100vw!important;
 }
 #wx{
   width: 100vw;
